--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
               </h1>
               <p>
               I am a PhD student within the Perception Group for Autonomous Driving of <a href="https://group.mercedes-benz.com/en/">Mercedes-Benz</a>. 
-              Supervised by <a href="https://scholar.google.com/citations?user=z76PBfYAAAAJ&hl">Bernt Schiele</a> from <a href="https://www.mpi-inf.mpg.de/home">Max Plank Institute for Informatics</a> and <a href="https://www.cs.princeton.edu/~fheide/">Felix Heide</a> from <a href="https://www.cs.princeton.edu/">Princeton University</a>, my research focuses on 3D computer vision.
+              Supervised by <a href="https://scholar.google.com/citations?user=z76PBfYAAAAJ&hl">Bernt Schiele</a> from <a href="https://www.mpi-inf.mpg.de/home">Max Planck Institute for Informatics</a> and <a href="https://www.cs.princeton.edu/~fheide/">Felix Heide</a> from <a href="https://www.cs.princeton.edu/">Princeton University</a>, my research focuses on 3D computer vision.
               </p>
               <p>
               I have a M.Sc. in Communications and Computer Engineering and a B.Sc. in Electrical Engineering from <a href="https://www.uni-ulm.de/en/">Ulm University</a>. My master's thesis was honored with the Sponsorship Award from the <a href="https://www.vdi.de/en/home">VDI (Association of German Engineers)</a>. 
