--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,13 +40,13 @@
               </p>
               <p>
               I have a M.Sc. in Communications and Computer Engineering and a B.Sc. in Electrical Engineering from <a href="https://www.uni-ulm.de/en/">Ulm University</a>. My master's thesis was honored with the Sponsorship Award from the <a href="https://www.vdi.de/en/home">VDI (Association of German Engineers)</a>. 
-              Additionally, during my studies, I was the recipient of the <a href="https://www.deutschlandstipendium.de/deutschlandstipendium/de/services/english/english_node.html">Germany Scholarship</a> (2016) and the Rolf-and-Lieselotte-Glaser-Foundation Scholarship (2016-2019).
+              Additionally, during my studies, I was the recipient of the <a href="https://www.deutschlandstipendium.de/deutschlandstipendium/de/services/english/english_node.html">Germany Scholarship</a> (2016-2017) and the Rolf-and-Lieselotte-Glaser-Foundation Scholarship (2017-2019).
               </p>
 
               <p style="text-align:center">
                 <a target="_blank" href="mailto:walz.stefanie@gmx.de"> Email</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=ZeHkzXwAAAAJ&hl">Scholar</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/stefanie-walz-9594a71ba"> LinkedIn </a> &nbsp;/&nbsp;
+                <a href="https://www.linkedin.com/in/walz-stefanie"> LinkedIn </a> &nbsp;/&nbsp;
                 <a href="https://github.com/stefaniewalz">GitHub</a> 
                               </p>
             </td>
@@ -164,7 +164,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:12px;">
-                Source code adapted from <a style="font-size:12px;" href="https://leonidk.com/">Leonid Keselman's</a> <a style="font-size:12px;" href="https://github.com/leonidk/leonidk.github.io">Jekyll fork</a> of <a style="font-size:12px;" href="https://jonbarron.info/">Jon Barron's public academic website</a>.<br>Updated March 2024.
+                Source code stolen from <a style="font-size:12px;" href="https://leonidk.com/">Leonid Keselman's</a> <a style="font-size:12px;" href="https://github.com/leonidk/leonidk.github.io">Jekyll fork</a> of <a style="font-size:12px;" href="https://jonbarron.info/">Jon Barron's public academic website</a>.<br>Updated April 2024.
               </p>
             </td>
           </tr>
